fix: refactoring server to have 1 main resource and tool for classes research and retrive

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -21,7 +21,7 @@ RUN curl -LsSf https://astral.sh/uv/install.sh | sh && \
 
 ENV PATH="/home/appuser/.local/bin:$PATH"
 
-RUN uv sync && source .venv/bin/activate
+RUN uv sync
 
 RUN uv run python docs_converter/godot_docs_converter.py
 
