--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13.5"
 dependencies = [
     "fastmcp>=2.10.6",
-    "pypandoc>=1.15"
+    "pypandoc>=1.15",
+    "pytest>=8.4.1",
 ]
 
 [tool.uv]
