refactor: create docs_tree.txt file in docs folder at container build time to streamiline get_documentation_tree tool. feat: add get_documentation_file tool to retrive specific docs file from path

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -4,7 +4,8 @@ USER root
 
 RUN apk update && apk add --no-cache \
     pandoc \
-    curl
+    curl \
+    tree
 
 COPY . /app
 
@@ -24,5 +25,7 @@ ENV PATH="/home/appuser/.local/bin:$PATH"
 RUN uv sync
 
 RUN uv run python docs_converter/godot_docs_converter.py
+
+RUN tree docs/. > docs/docs_tree.txt
 
 CMD ["uv", "run", "fastmcp", "run", "main.py"]
