--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,14 @@ readme = "README.md"
 requires-python = ">=3.13.5"
 dependencies = [
     "fastmcp>=2.10.6",
-    "pypandoc>=1.15",
-    "pytest>=8.4.1",
+    "pypandoc>=1.15"
 ]
 
 [tool.uv]
-dev-dependencies = []
+dev-dependencies = [
+    "pytest>=8.4.1"
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+testpaths = ["tests"]
